vmmjava/vmm/internal/VmmNative.java

package vmm.internal;

import com.sun.jna.*;
import com.sun.jna.ptr.*;

import vmm.VmmException;

/**
 * JNA native code wrapper for MemProcFS.
 * @see https://github.com/ufrisk/MemProcFS
 * @author Ulf Frisk - pcileech@frizk.net
 */
interface VmmNative extends Library {
	static final int MAX_PATH						= 260;
	
	static final int VMMDLL_VFS_FILELIST_VERSION    			= 2;
	static final long MMDLL_PROCESS_INFORMATION_MAGIC 			= 0xc0ffee663df9301eL;
	static final short VMMDLL_PROCESS_INFORMATION_VERSION 		= 7;
	static final long VMMDLL_REGISTRY_HIVE_INFORMATION_MAGIC	= 0xc0ffee653df8d01eL;
	static final short VMMDLL_REGISTRY_HIVE_INFORMATION_VERSION = 3;
	
	static final int VMMDLL_MAP_PTE_VERSION 		= 2;
	static final int VMMDLL_MAP_VAD_VERSION 		= 6;
	static final int VMMDLL_MAP_VADEX_VERSION 		= 4;
	static final int VMMDLL_MAP_MODULE_VERSION 		= 6;
	static final int VMMDLL_MAP_UNLOADEDMODULE_VERSION = 2;
	static final int VMMDLL_MAP_EAT_VERSION 		= 3;
	static final int VMMDLL_MAP_IAT_VERSION 		= 2;
	static final int VMMDLL_MAP_HEAP_VERSION 		= 4;
	static final int VMMDLL_MAP_HEAPALLOC_VERSION 	= 1;
	static final int VMMDLL_MAP_THREAD_VERSION 		= 4;
	static final int VMMDLL_MAP_HANDLE_VERSION 		= 3;
	static final int VMMDLL_MAP_POOL_VERSION 		= 2;
	static final int VMMDLL_MAP_NET_VERSION 		= 3;
	static final int VMMDLL_MAP_PHYSMEM_VERSION 	= 2;
	static final int VMMDLL_MAP_USER_VERSION 		= 2;
	static final int VMMDLL_MAP_SERVICE_VERSION		= 3;
	
	static final int VMMDLL_POOLMAP_FLAG_ALL 		= 0;
	static final int VMMDLL_POOLMAP_FLAG_BIG 		= 1;
	
	
	
	VmmNative INSTANCE = Native.load("vmm", VmmNative.class);
	
	
	
	Pointer VMMDLL_Initialize(int argc, String argv[]);
	void VMMDLL_Close(Pointer hVMM);
	void VMMDLL_CloseAll();
	long VMMDLL_MemSize(Pointer pvMem);
	void VMMDLL_MemFree(Pointer pvMem);
	
	
	
	boolean VMMDLL_ConfigGet(Pointer hVMM, long fOption, LongByReference pqwValue);
	boolean VMMDLL_ConfigSet(Pointer hVMM, long fOption, long qwValue);
	
	
	
	boolean VMMDLL_InitializePlugins(Pointer hVMM);
	
	
	
	@Structure.FieldOrder({"dwVersion", "pfnAddFile", "pfnAddDirectory", "h"})
	class VMMDLL_VFS_FILELIST2 extends Structure {
		public int dwVersion;
		public CB_FILE pfnAddFile;
		public CB_DIRECTORY pfnAddDirectory;
		public long h;
		interface CB_FILE extends Callback {
			void invoke(long h, String uszName, long cb, Pointer pExInfo);
		}
		interface CB_DIRECTORY extends Callback {
			void invoke(long h, String uszName, Pointer pExInfo);
		}
	}
	
	boolean VMMDLL_VfsListU(Pointer hVMM, byte[] uszPath, VMMDLL_VFS_FILELIST2 pFileList);
	int VMMDLL_VfsReadU(Pointer hVMM, byte[] uszFileName, Pointer pb, int cb, IntByReference pcbRead, long cbOffset);
	int VMMDLL_VfsWriteU(Pointer hVMM, byte[] uszFileName, Pointer pb, int cb, IntByReference pcbWrite, long cbOffset);
	
	
	
	boolean VMMDLL_MemReadEx(Pointer hVMM, int dwPID, long qwA, byte[] pb, int cb, IntByReference pcbReadOpt, int flags);
	boolean VMMDLL_MemPrefetchPages(Pointer hVMM, int dwPID, long[] pPrefetchAddresses, int cPrefetchAddresses);
	boolean VMMDLL_MemWrite(Pointer hVMM, int dwPID, long qwA, byte[] pb, int cb);
	boolean VMMDLL_MemVirt2Phys(Pointer hVMM, int dwPID, long qwVA, LongByReference pqwPA);
	
	
	
	Pointer VMMDLL_Scatter_Initialize(Pointer hVMM, int dwPID, int flags);
	boolean VMMDLL_Scatter_Prepare(Pointer hS, long va, int cb);
	boolean VMMDLL_Scatter_PrepareWrite(Pointer hS, long va, byte[] pb, int cb);
	boolean VMMDLL_Scatter_Execute(Pointer hS);
	boolean VMMDLL_Scatter_Read(Pointer hS, long va, int cb, byte[] pb, IntByReference pcbRead);
	boolean VMMDLL_Scatter_Clear(Pointer hS, int pid, int flags);
	void VMMDLL_Scatter_CloseHandle(Pointer hS);
	
	
	
	boolean VMMDLL_PidGetFromName(Pointer hVMM, byte[] szProcName, IntByReference pdwPID);
	boolean VMMDLL_PidList(Pointer hVMM, int[] pPIDs, LongByReference pcPIDs);
	
	
	
	
	@Structure.FieldOrder({"pa", "cb"})
	class VMMDLL_MAP_PHYSMEM_ENTRY extends Structure {
		public long pa;
		public long cb;
	}
	
	@Structure.FieldOrder({"dwVersion", "_Reserved1", "cMap", "_Reserved2", "pMap"})
	class VMMDLL_MAP_PHYSMEM extends Structure {
		public int dwVersion;
		public int[] _Reserved1 = new int[5];
		public int cMap;
		public int _Reserved2;
		public VMMDLL_MAP_PHYSMEM_ENTRY[] pMap;
		
		VMMDLL_MAP_PHYSMEM(Pointer p)
		{
			super(p);
			pMap = new VMMDLL_MAP_PHYSMEM_ENTRY[1];
			read();
			if(dwVersion != VmmNative.VMMDLL_MAP_PHYSMEM_VERSION) { throw new VmmException("Bad Version"); }
			pMap = new VMMDLL_MAP_PHYSMEM_ENTRY[cMap];
			read();
		}
	}
	
	boolean VMMDLL_Map_GetPhysMem(Pointer hVMM, PointerByReference ppPhysMemMap);
	
	
	
	@Structure.FieldOrder({"fValid", "_Reserved", "port", "pbAddr", "uszText"})
	class VMMDLL_MAP_NETENTRY_SRCDST extends Structure {
		public boolean fValid;
		public short _Reserved;
		public short port;
		public byte[] pbAddr = new byte[16];
		public String uszText;
	}
	
	@Structure.FieldOrder({"dwPID", "dwState", "_FutureUse3", "AF", "Src", "Dst", "vaObj", "ftTime", "dwPoolTag", "_FutureUse4", "uszText", "_FutureUse2"})
	class VMMDLL_MAP_NETENTRY extends Structure {
		public int dwPID;
		public int dwState;
		public short[] _FutureUse3 = new short[3];
		public short AF;
		public VMMDLL_MAP_NETENTRY_SRCDST Src;
		public VMMDLL_MAP_NETENTRY_SRCDST Dst;
		public long vaObj;
		public long ftTime;
		public int dwPoolTag;
		public int _FutureUse4;
		public String uszText;
		public int[] _FutureUse2 = new int[4];
	}
	
	@Structure.FieldOrder({"dwVersion", "_Reserved1", "pbMultiText", "cbMultiText", "cMap", "pMap"})
	class VMMDLL_MAP_NET extends Structure {
		public int dwVersion;
		public int _Reserved1;
		public Pointer pbMultiText;
		public int cbMultiText;
		public int cMap;
		public VMMDLL_MAP_NETENTRY[] pMap;
		
		VMMDLL_MAP_NET(Pointer p)
		{
			super(p);
			pMap = new VMMDLL_MAP_NETENTRY[1];
			read();
			if(dwVersion != VmmNative.VMMDLL_MAP_NET_VERSION) { throw new VmmException("Bad Version"); }
			pMap = new VMMDLL_MAP_NETENTRY[cMap];
			read();
		}
	}
	
	boolean VMMDLL_Map_GetNetU(Pointer hVMM, PointerByReference ppPhysMemMap);
	
	
	
	@Structure.FieldOrder({"_FutureUse1", "uszText", "vaRegHive", "uszSID", "_FutureUse2"})
	class VMMDLL_MAP_USERENTRY extends Structure {
		public int[] _FutureUse1 = new int[2];
		public String uszText;
		public long vaRegHive;
		public String uszSID;
		public int[] _FutureUse2 = new int[2];
	}
	
	@Structure.FieldOrder({"dwVersion", "_Reserved1", "pbMultiText", "cbMultiText", "cMap", "pMap"})
	class VMMDLL_MAP_USER extends Structure {
		public int dwVersion;
		public int[] _Reserved1 = new int[5];
		public Pointer pbMultiText;
		public int cbMultiText;
		public int cMap;
		public VMMDLL_MAP_USERENTRY[] pMap;
		
		VMMDLL_MAP_USER(Pointer p)
		{
			super(p);
			pMap = new VMMDLL_MAP_USERENTRY[1];
			read();
			if(dwVersion != VmmNative.VMMDLL_MAP_USER_VERSION) { throw new VmmException("Bad Version"); }
			pMap = new VMMDLL_MAP_USERENTRY[cMap];
			read();
		}
	}
	
	boolean VMMDLL_Map_GetUsersU(Pointer hVMM, PointerByReference ppUserMap);
	
	
	
	@Structure.FieldOrder({"dwServiceType", "dwCurrentState", "dwControlsAccepted", "dwWin32ExitCode", "dwServiceSpecificExitCode", "dwCheckPoint", "dwWaitHint"})
	class SERVICE_STATUS extends Structure {
		public int dwServiceType;
	    public int dwCurrentState;
	    public int dwControlsAccepted;
	    public int dwWin32ExitCode;
	    public int dwServiceSpecificExitCode;
	    public int dwCheckPoint;
	    public int dwWaitHint;
	}
	
	@Structure.FieldOrder({"vaObj", "dwOrdinal", "dwStartType", "ServiceStatus", "uszServiceName", "uszDisplayName", "uszPath", "uszUserTp", "uszUserAcct", "uszImagePath", "dwPID", "_FutureUse1", "_FutureUse2"})
	class VMMDLL_MAP_SERVICEENTRY extends Structure {
		public long vaObj;
		public int dwOrdinal;
		public int dwStartType;
		public SERVICE_STATUS ServiceStatus;
		public String uszServiceName;
		public String uszDisplayName;
		public String uszPath;
		public String uszUserTp;
		public String uszUserAcct;
		public String uszImagePath;
		public int dwPID;
		public int _FutureUse1;
		public long _FutureUse2;
	}
	
	@Structure.FieldOrder({"dwVersion", "_Reserved1", "pbMultiText", "cbMultiText", "cMap", "pMap"})
	class VMMDLL_MAP_SERVICE extends Structure {
		public int dwVersion;
		public int[] _Reserved1 = new int[5];
		public Pointer pbMultiText;
		public int cbMultiText;
		public int cMap;
		public VMMDLL_MAP_SERVICEENTRY[] pMap;
		
		VMMDLL_MAP_SERVICE(Pointer p)
		{
			super(p);
			pMap = new VMMDLL_MAP_SERVICEENTRY[1];
			read();
			if(dwVersion != VmmNative.VMMDLL_MAP_SERVICE_VERSION) { throw new VmmException("Bad Version"); }
			pMap = new VMMDLL_MAP_SERVICEENTRY[cMap];
			read();
		}
	}
	
	boolean VMMDLL_Map_GetServicesU(Pointer hVMM, PointerByReference ppServiceMap);
	
	
	
	@Structure.FieldOrder({"va", "tag", "fAlloc", "tpPool", "tpSS", "cb", "_Filler"})
	class VMMDLL_MAP_POOLENTRY extends Structure {
		public long va;
		public byte[] tag = new byte[5];
		public byte fAlloc;
		public byte tpPool;
		public byte tpSS;
		public int cb;
		public int _Filler;
	}
	
	@Structure.FieldOrder({"dwVersion", "_Reserved1", "cbTotal", "piTag2Map", "pTag", "cTag", "cMap", "pMap"})
	class VMMDLL_MAP_POOL extends Structure {
		public int dwVersion;
		public int[] _Reserved1 = new int[6];
		public int cbTotal;
		public Pointer piTag2Map;
		public Pointer pTag;
		public int cTag;
		public int cMap;
		public VMMDLL_MAP_POOLENTRY[] pMap;
		
		VMMDLL_MAP_POOL(Pointer p)
		{
			super(p);
			pMap = new VMMDLL_MAP_POOLENTRY[1];
			read();
			if(dwVersion != VmmNative.VMMDLL_MAP_POOL_VERSION) { throw new VmmException("Bad Version"); }
			pMap = new VMMDLL_MAP_POOLENTRY[cMap];
			read();
		}
	}
	
	boolean VMMDLL_Map_GetPool(Pointer hVMM, PointerByReference ppPoolMap, int flags);
	
	
	
	@Structure.FieldOrder({"vaObject", "dwHandle", "_dwGrantedAccess_iType", "qwHandleCount", "qwPointerCount", "vaObjectCreateInfo", "vaSecurityDescriptor", "uszText", "_FutureUse2", "dwPID", "dwPoolTag", "_FutureUse", "uszType"})
	class VMMDLL_MAP_HANDLEENTRY extends Structure {
		public long vaObject;
		public int dwHandle;
		public int _dwGrantedAccess_iType;
		public long qwHandleCount;
		public long qwPointerCount;
		public long vaObjectCreateInfo;
		public long vaSecurityDescriptor;
		public String uszText;
		public int _FutureUse2;
		public int dwPID;
		public byte[] dwPoolTag = new byte[4];
		public int[] _FutureUse = new int[7];
		public String uszType;
	}
	
	@Structure.FieldOrder({"dwVersion", "_Reserved1", "pbMultiText", "cbMultiText", "cMap", "pMap"})
	class VMMDLL_MAP_HANDLE extends Structure {
		public int dwVersion;
		public int[] _Reserved1 = new int[5];
		public Pointer pbMultiText;
		public int cbMultiText;
		public int cMap;
		public VMMDLL_MAP_HANDLEENTRY[] pMap;
		
		VMMDLL_MAP_HANDLE(Pointer p)
		{
			super(p);
			pMap = new VMMDLL_MAP_HANDLEENTRY[1];
			read();
			if(dwVersion != VmmNative.VMMDLL_MAP_HANDLE_VERSION) { throw new VmmException("Bad Version"); }
			pMap = new VMMDLL_MAP_HANDLEENTRY[cMap];
			read();
		}
	}
	
	boolean VMMDLL_Map_GetHandleU(Pointer hVMM, int dwPID, PointerByReference ppHandleMap);
	
	
	
	
	@Structure.FieldOrder({"va", "cb", "tp", "iHeap"})
	class VMMDLL_MAP_HEAP_SEGMENTENTRY extends Structure {
		public long va;
		public int cb;
		public short tp;
		public short iHeap;
	}
	
	@Structure.FieldOrder({"va", "tp", "f32", "iHeap", "dwHeapNum"})
	class VMMDLL_MAP_HEAPENTRY extends Structure {
		public long va;
		public int tp;
		public boolean f32;
		public int iHeap;
		public int dwHeapNum;
	}
	
	@Structure.FieldOrder({"dwVersion", "_Reserved1", "ptrSegments", "cSegments", "cMap", "pMap", "pSegments"})
	class VMMDLL_MAP_HEAP extends Structure {
		public int dwVersion;
		public int[] _Reserved1 = new int[7];
		public Pointer ptrSegments;
		public int cSegments;
		public int cMap;
		public VMMDLL_MAP_HEAPENTRY[] pMap;
		public VMMDLL_MAP_HEAP_SEGMENTENTRY[] pSegments;
